<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/lifecycle"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/material_dynamic_neutral20"/>

        <TextView
            android:id="@+id/ResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="2"
            android:gravity="end|center"
            android:text="@string/result"
            android:textSize="70sp" />

        <TableLayout
            android:id="@+id/num_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:stretchColumns="*">
            <TableRow
                android:layout_marginTop="5sp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonClearEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:forceHasOverlappingRendering="false"
                    android:text="@string/ce"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    tools:text="CE"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/c"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonBackSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/bs"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/divide"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="5sp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_9"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_8"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_7"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonMul"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/multiple"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="5sp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_6"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_4"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="5sp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/plus"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="5sp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonOppo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/opposite"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Button0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/dot"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:background="@color/gray"
                    android:layout_weight="1"
                    android:layout_margin="2sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonEqual"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2sp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/equal"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>